--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,18 @@ env:
 android:
   components:
     # The BuildTools version used by your project
+    - build-tools-26.0.2
     - build-tools-27.1.1
 
     # The SDK version used to compile your project
+    - android-26
     - android-27
     - extra-google-m2repository
     - extra-android-m2repository
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
+    - sys-img-armeabi-v7a-android-26
     - sys-img-armeabi-v7a-android-27
 
   licenses:
@@ -31,10 +34,11 @@ branches:
 before_install:
   - mkdir "$ANDROID_HOME/licenses" || true
   - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
+  - echo -e "\nd56f5187479451eabf01fb78af6dfcb131a6481e" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
 
 
 before_script:
-  - echo no | android create avd --force -n test -t android-27 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-26 --abi armeabi-v7a
   - QEMU_AUDIO_DRV=none emulator -avd test -no-skin -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
